# pulpo

./: .env.example  .gitignore  CLAUDE.md  NEXT_SESSION.md  PLAN_LISTA_CLIENTES.md  README.md  ROADMAP_CONTACTOS.md  api.js  com.josetabuyo.pulpo.expire.plist  com.josetabuyo.pulpo.plist  conftest.py  connect.js  db.js  index.js  monitoring.json  node_modules  package-lock.json  package.json  phones.example.json  pyproject.toml  restart-backend.sh  rotate-logs.sh  start-backend-launchd.sh  start.sh  stop-backend.sh  stop-frontend.sh  telegram.js  watch_sync.py
backend/: NUEVO_DISENO_TRIGGERS.md  auth_jwt.py  browser_queue.py  config.py  db.py  main.py  middleware_auth.py  migrate_legacy_flows.py  migrate_simple.py  paused.py  requirements.txt  sim.py  start.sh  state.py  teli_poller.py  wavi_poller.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.cjs  vercel.json  vite.config.js  vitest.config.js
management/: ARQUITECTURA.md  ARQUITECTURA_EVOLUCION.md  BUG_LUGANENSE.md  BUG_LUGANENSE_COBERTURA_POSTS.md  BUG_LUGANENSE_LINKS.md  BUG_SUMMARIZER_GARANTIDO.md  HANDOFF_FB_CACHE_V2.md  HANDOFF_FB_URLS_V3.md  HANDOFF_SCRAPER_SCROLL.md  HANDOFF_WAVI_RECONECTAR.md  LOG_ROTATION.md  NEXT_SESSION_BUGFIX_AUDIO_TIMESTAMP.md  NEXT_SESSION_BUGFIX_FULLSYNC_SCROLL.md  NEXT_SESSION_SUMARIZADOR.md  PLAN_CONEXIONES_MULTI_EMPRESA.md  PLAN_CONTACTOS.md  PLAN_EXCEL_NODO.md  PLAN_FLOW_EDITOR.md  PLAN_FLOW_NODES.md  PLAN_FOTO_PERFIL_EMPRESA.md  PLAN_GSHEET_CONNECTIONS.md  PLAN_IA_AGENTES.md  PLAN_IMPORT_CONTACTOS_SUGERIDOS.md  PLAN_LOGIN_SEGURIDAD.md  PLAN_LUGANENSE.md  PLAN_MONITORING.md  PLAN_NODES_REFACTOR.md  PLAN_PORTAL_EMPRESA.md  PLAN_PRODUCCION.md  PLAN_SUMMARIZER_V2.md  (+10 more)
(+483 files in other folders)
