[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulpo-lib"
version = "0.1.0"
description = "Pulpo — bot orchestration engine with CLI, lib, API, and UI interfaces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "José Tabuyo", email = "josetabuyo@gmail.com"},
]
keywords = ["bot", "whatsapp", "telegram", "workflow", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "groq>=0.11.0",
    "langgraph>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-openai>=0.2.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "wavi-lib>=0.2.0",
    "teli-lib>=0.1.0",
    "playwright>=1.49.0",
    "python-telegram-bot>=21.10.0",
]

[project.scripts]
pulpo = "pulpo.interfaces.cli.main:cli"

[project.urls]
Source = "https://github.com/josetabuyo/pulpo"

[tool.hatch.build.targets.wheel]
packages = ["pulpo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
